Archive2/ea/8abbae1c08f5b8/output
main.cpp: In function 'int main()':
main.cpp:17:5: error: static assertion failed: 
     static_assert( has_foo<Outer>{}, "" );
     ^
